--- a/passwords.html
+++ b/passwords.html
@@ -10,20 +10,50 @@
 </head>
 <body>
     <div class="app">
-        <header class="app-header">
-            <div class="app-header-logo">
-              <div class="logo">
-                <span class="logo-icon">
-                  <img src="images/icon.png">
-                </span>
-                <h1 class="logo-title">
-                  <span>Safe</span>
-                  <span>Loot</span>
-                </h1>
-              </div>
-            </div>
-                <h2 class="page-tittle"> Passwords </h2>
-          </header>
+      <header class="app-header">
+        <div class="app-header-logo">
+          <div class="logo">
+            <span class="logo-icon">
+              <img src="images/icon.png">
+            </span>
+            <h1 class="logo-title">
+              <span>Safe</span>
+              <span>Loot</span>
+            </h1>
+          </div>
+        </div>
+        <div class="app-header-navigation">
+          <div class="tabs">
+            <a href="index.html" >
+              Home
+            </a>
+            <a href="account.html">
+              Settings
+            </a>
+            <a href="#">
+              
+            </a>
+            <a href="#" class="active">
+              Passwords
+            </a>
+            <a href="files.html" >
+              Files
+            </a>
+            <a href="#">
+              Wallet
+            </a>
+          </div>
+        </div>
+        <div class="app-header-actions">
+          <a href="account.html" class="user-profile">
+            <span>Stoqn Babanov</span>
+            <span>
+              <img src="images/image.png" />
+            </sp  an>
+          </a >
+        </div>
+            
+      </header>
           <div class="app-body">
             <div class="app-body-navigation">
               <nav class="navigation">
