--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -57,9 +57,9 @@
       <div class="app-body">
         <div class="app-body-navigation">
           <nav class="navigation">
-            <a href="#">
+            <a href="aboutus.html" target="_blank">
               <i class="ph-browsers"></i>
-              <span>Dashboard</span>
+              <span>About us</span>
             </a>
             <a href="#">
               <i class="ph-check-square"></i>
