--- a/src/main/resources/static/html/passwords.html
+++ b/src/main/resources/static/html/passwords.html
@@ -57,9 +57,21 @@
           <div class="app-body">
             <div class="app-body-navigation">
               <nav class="navigation">
-                <a href="index.html">
+                <a href="aboutus.html" target="_blank">
                   <i class="ph-browsers"></i>
-                  <span>Return to home</span>
+                  <span>About us</span>
+                </a>
+                <a href="#">
+                  <i class="ph-check-square"></i>
+                  <span>Plan</span>
+                </a>
+                <a href="#">
+                  <i class="ph-swap"></i>
+                  <span>Transfers</span>
+                </a>
+                <a href="#">
+                  <i class="ph-file-text"></i>
+                  <span>Security</span>
                 </a>
               </nav>
               
