--- a/src/main/resources/static/html/aboutus.html
+++ b/src/main/resources/static/html/aboutus.html
@@ -16,12 +16,12 @@
                 <span class="logo-icon">
                   <img src="images/icon.png">
                 </span>
-                
+
                 <h1 class="logo-title">
                   <span>Safe</span>
                   <span>Loot</span>
                 </h1>
-                
+
               </div>
             </div>
             <h1>About us</h1> 
@@ -45,10 +45,19 @@
                   <span>Security</span>
                 </a>
               </nav>
-              <div class="app-body-main-content">
-                    <a>Boris</a>
+              <div class="app-body-main-content"> 
+					<h1>Boris</h1>
+					<p>Boris Stoyanov - 15 years old, developer of the website + Design of the java app using HTML, CSS, JS.<br/> Worked with HTML, CSS, js-game development, game development with UnrealEngine / Unity.</p>
+					<h1>Anton</h1>
+					<p>Anton Stankov - 15 years old, developer for Java Application/Java BackEnd using Spring Boot,<br/> worked with C#, C, Java, HTML, CSS, JavaScript.</p>
+					<h1>Stoqn</h1>
+					<p>Stoyan Babanov - 15 years old, developer in creating SEO optimization + presentation through Power Point. <br/>Worked with JavaScript-Game development, PYTHON and C.</p>
+					<h1>Ivan</h1>
+					<p>Ivan Lambev - 15 years old,  developer of password generator, password and user validator, <br/>worked with PYTHON, C, Java, HTML, CSS, JavaScript.</p>
+					<h1>Todor</h1>
+					<p>Todor Stoimenov - 16 years old,  front-end developer (JavaScript),<br/> worked with game development, JavaScript, c, c++.</p>
               </div>
-              </div>   
+              </div>
         </div>
     </div>
 </body>
