Update Terms of Services.html
fixed ToS.html

--- a/src/main/resources/static/html/Terms of Services.html
+++ b/src/main/resources/static/html/Terms of Services.html
@@ -66,13 +66,13 @@
 	<p>We take the privacy and security of your data seriously.<br/> We will never sell or share your personal information with any third party without your explicit consent.<br/> However, we cannot guarantee the security of your data, and you use our web application at your own risk.</p>
 	<br/><br/>
     <h2 id="4">4. Ownership of Content</h2>
-	<p>You retain ownership of any content that you upload to our web application.<br/> However, by uploading content, you grant us a non-exclusive, worldwide, royalty-free, and perpetual license to use, distribute, and display the content in connection with our web application.</p>
+	<p>You retain ownership of any content that you upload to our web application.<br/> However, by uploading content, you grant us a non-exclusive, worldwide,<br/> royalty-free, and perpetual license to use, distribute, and display the content in connection with our web application.</p>
 	<br/><br/>
     <h2 id="5">5. Disclaimer of Warranties</h2>
 	<p>Our web application is provided on an "as is" and "as available" basis.<br/> We make no representations or warranties of any kind, express or implied.<br/> As to the operation of our web application or the information, content, materials, or products included on our web application.</p>
 	<br/><br/>
     <h2 id="6">6. Limitation of Liability</h2>
-	<p>We will not be liable for any damages of any kind arising from the use of our web application, including but not limited to direct, indirect, incidental, punitive, and consequential damages.</p>
+	<p>We will not be liable for any damages of any kind arising from the use of our web application,<br/> including but not limited to direct, indirect, incidental, punitive, and consequential damages.</p>
 	<br/><br/>
     <h2 id="7">7. Changes to These Terms</h2>
 	<p>We reserve the right to modify these terms of service at any time without prior notice.<br/> By continuing to use our web application after we post changes to these terms, you agree to be bound by the revised terms.</p>
