Update Terms of Services.html

--- a/src/main/resources/static/html/Terms of Services.html
+++ b/src/main/resources/static/html/Terms of Services.html
@@ -24,7 +24,7 @@
 
               </div>
             </div>
-            <h1>About us</h1> 
+            <h1>Terms Of Services</h1> 
         </header>
         <div class="app-body">
             <nav class="navigation">
@@ -32,7 +32,7 @@
                   <i class="ph-browsers"></i>
                   <span>About us</span>
                 </a>
-                <a href="#">
+                <a href="aboutus.html">
                   <i class="ph-check-square"></i>
                   <span>Plan</span>
                 </a>
