--- a/src/main/resources/static/html/Terms of Services.html
+++ b/src/main/resources/static/html/Terms of Services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Safe Loot</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.ico" />
 </head>
 <body>
     <div class="app">
@@ -28,13 +28,13 @@
         </header>
         <div class="app-body">
             <nav class="navigation">
-                <a>
+                <a href="aboutus.html">
                   <i class="ph-browsers"></i>
                   <span>About us</span>
                 </a>
                 <a href="aboutus.html">
                   <i class="ph-check-square"></i>
-                  <span>Plan</span>
+                  <span>ToS</span>
                 </a>
                 <a href="#">
                   <i class="ph-swap"></i>
