--- a/src/main/resources/static/html/aboutus.html
+++ b/src/main/resources/static/html/aboutus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.ico" />
 </head>
 <body>
     <div class="app"">
@@ -32,9 +32,9 @@
                   <i class="ph-browsers"></i>
                   <span>About us</span>
                 </a>
-                <a href="#">
+                <a href="Terms of Services.html">
                   <i class="ph-check-square"></i>
-                  <span>Plan</span>
+                  <span>ToS</span>
                 </a>
                 <a href="#">
                   <i class="ph-swap"></i>
