--- a/src/main/resources/static/html/signin.html
+++ b/src/main/resources/static/html/signin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.ico" />
 </head>
 <body>
     <div class="app" style="width : 50% ">
