--- a/src/main/resources/static/html/Privacy&Policy.html
+++ b/src/main/resources/static/html/Privacy&Policy.html
@@ -27,21 +27,21 @@
         </header>
         <div class="app-body">
             <nav class="navigation">
-                <a>
+                <a href="aboutus.html">
                   <i class="ph-browsers"></i>
+                  <span>About us</span>
+                </a>
+                <a href="Terms of Services.html">
+                  <i class="ph-check-square"></i>
+                  <span>ToS</span>
+                </a>
+                <a>
+                  <i class="ph-swap"></i>
                   <span>Privacy & Policy</span>
                 </a>
-                <a href="#">
-                  <i class="ph-check-square"></i>
-                  <span>Plan</span>
-                </a>
-                <a href="#">
-                  <i class="ph-swap"></i>
-                  <span>Transfers</span>
-                </a>
-                <a href="#">
+                <a href="index.html">
                   <i class="ph-file-text"></i>
-                  <span>Security</span>
+                  <span>Return</span>
                 </a>
               </nav>
               <div class="app-body-main-content"> 
