--- a/src/main/resources/static/html/files.html
+++ b/src/main/resources/static/html/files.html
@@ -49,7 +49,7 @@
                 <span>Stoqn Babanov</span>
                 <span>
                   <img src="images/image.png" />
-                </sp  an>
+                </span>
               </a >
             </div>
                 
@@ -65,13 +65,9 @@
                   <i class="ph-check-square"></i>
                   <span>ToS</span>
                 </a>
-                <a href="#">
+                <a href="Privacy&Policy.html">
                   <i class="ph-swap"></i>
-                  <span>Transfers</span>
-                </a>
-                <a href="#">
-                  <i class="ph-file-text"></i>
-                  <span>Security</span>
+                  <span>Privacy & Policy</span>
                 </a>
               </nav>
               
