--- a/src/main/resources/static/html/aboutus.html
+++ b/src/main/resources/static/html/aboutus.html
@@ -36,13 +36,13 @@
                   <i class="ph-check-square"></i>
                   <span>ToS</span>
                 </a>
-                <a href="#">
+                <a href="Privacy&Policy.html">
                   <i class="ph-swap"></i>
-                  <span>Transfers</span>
+                  <span>Privacy & Policy</span>
                 </a>
-                <a href="#">
+                <a href="index.html">
                   <i class="ph-file-text"></i>
-                  <span>Security</span>
+                  <span>Return</span>
                 </a>
               </nav>
               <div class="app-body-main-content"> 
