--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -65,14 +65,11 @@
               <i class="ph-check-square"></i>
               <span>ToS</span>
             </a>
-            <a href="#">
+            <a href="Privacy&Policy.html">
               <i class="ph-swap"></i>
-              <span>Transfers</span>
+              <span>Privacy & Policy</span>
             </a>
-            <a href="#">
-              <i class="ph-file-text"></i>
-              <span>Security</span>
-            </a>
+
           </nav>
           
         </div>
