--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Safe loot</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" type="image/x-icon" href="icon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/icon.ico" />
   </head>
   <body>
     <div class="app">
