--- a/src/main/resources/static/html/aboutus.html
+++ b/src/main/resources/static/html/aboutus.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="css.css">
-    <link rel="icon" type="image/x-icon" href="icon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/icon.ico" />
 </head>
 <body>
     <div class="app"">
