Fixed styling errors

--- a/src/main/resources/static/html/Terms of Services.html
+++ b/src/main/resources/static/html/Terms of Services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safe Loot</title>
+    <title>Terms of Services</title>
     <link rel="stylesheet" href="css.css">
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
 </head>
@@ -46,42 +46,41 @@
                 </a>
               </nav>
               <div class="app-body-main-content"> 
-                <a href="#1">1. User Accounts</a><br/><br/>
-                <a href="#2">2. Use of Our Web Application</a><br/><br/>
-                <a href="#3">3. Data Privacy</a><br/><br/>
-                <a href="#4">4. Ownership of Content</a><br/><br/>
-                <a href="#5">5. Disclaimer of Warranties</a><br/><br/>
-                <a href="#6">6. Limitation of Liability</a><br/><br/>
-                <a href="#7">7. Changes to These Terms</a><br/><br/>
-                <a href="#8">8. Governing Law</a><br/><br/>
+                    <a href="#1">1. User Accounts</a><br/><br/>
+                    <a href="#2">2. Use of Our Web Application</a><br/><br/>
+                    <a href="#3">3. Data Privacy</a><br/><br/>
+                    <a href="#4">4. Ownership of Content</a><br/><br/>
+                    <a href="#5">5. Disclaimer of Warranties</a><br/><br/>
+                    <a href="#6">6. Limitation of Liability</a><br/><br/>
+                    <a href="#7">7. Changes to These Terms</a><br/><br/>
+                    <a href="#8">8. Governing Law</a><br/><br/>
 
-	<p>Thank you for using our web application that stores your important information.<br/> By using our web application, you agree to the following terms:</p>
-	<h2 id="1">1. User Accounts</h2>
-	<p>You must create an account in order to use our web application.<br/> You are solely responsible for maintaining the confidentiality of your account information, including your username and password.<br/> You agree to notify us immediately if you suspect any unauthorized use of your account.</p>
-	<br/><br/>
-    <h2 id="2">2. Use of Our Web Application</h2>
-	<p>You may use our web application for lawful purposes only.<br/> You agree not to use our web application for any illegal or unauthorized purpose.<br/> You also agree not to use our web application in any way that could damage, disable, overburden, or impair our servers or networks.</p>
-	<br/><br/>
-    <h2 id="3">3. Data Privacy</h2>
-	<p>We take the privacy and security of your data seriously.<br/> We will never sell or share your personal information with any third party without your explicit consent.<br/> However, we cannot guarantee the security of your data, and you use our web application at your own risk.</p>
-	<br/><br/>
-    <h2 id="4">4. Ownership of Content</h2>
-	<p>You retain ownership of any content that you upload to our web application.<br/> However, by uploading content, you grant us a non-exclusive, worldwide,<br/> royalty-free, and perpetual license to use, distribute, and display the content in connection with our web application.</p>
-	<br/><br/>
-    <h2 id="5">5. Disclaimer of Warranties</h2>
-	<p>Our web application is provided on an "as is" and "as available" basis.<br/> We make no representations or warranties of any kind, express or implied.<br/> As to the operation of our web application or the information, content, materials, or products included on our web application.</p>
-	<br/><br/>
-    <h2 id="6">6. Limitation of Liability</h2>
-	<p>We will not be liable for any damages of any kind arising from the use of our web application,<br/> including but not limited to direct, indirect, incidental, punitive, and consequential damages.</p>
-	<br/><br/>
-    <h2 id="7">7. Changes to These Terms</h2>
-	<p>We reserve the right to modify these terms of service at any time without prior notice.<br/> By continuing to use our web application after we post changes to these terms, you agree to be bound by the revised terms.</p>
-	<br/><br/>
-    <h2 id="8">8. Governing Law</h2>
-	<p>These terms of service shall be governed by and construed in accordance with the laws of Bulgaria.<br/> Any disputes arising under or in connection with these terms shall be resolved exclusively by the courts of Bulgaria.</p>
+      <p>Thank you for using our web application that stores your important information.<br/> By using our web application, you agree to the following terms:</p>
+      <h2 id="1">1. User Accounts</h2>
+      <p>You must create an account in order to use our web application.<br/> You are solely responsible for maintaining the confidentiality of your account information, including your username and password.<br/> You agree to notify us immediately if you suspect any unauthorized use of your account.</p>
+      <br/><br/>
+        <h2 id="2">2. Use of Our Web Application</h2>
+      <p>You may use our web application for lawful purposes only.<br/> You agree not to use our web application for any illegal or unauthorized purpose.<br/> You also agree not to use our web application in any way that could damage, disable, overburden, or impair our servers or networks.</p>
+      <br/><br/>
+        <h2 id="3">3. Data Privacy</h2>
+      <p>We take the privacy and security of your data seriously.<br/> We will never sell or share your personal information with any third party without your explicit consent.<br/> However, we cannot guarantee the security of your data, and you use our web application at your own risk.</p>
+      <br/><br/>
+        <h2 id="4">4. Ownership of Content</h2>
+      <p>You retain ownership of any content that you upload to our web application.<br/> However, by uploading content, you grant us a non-exclusive, worldwide,<br/> royalty-free, and perpetual license to use, distribute, and display the content in connection with our web application.</p>
+      <br/><br/>
+        <h2 id="5">5. Disclaimer of Warranties</h2>
+      <p>Our web application is provided on an "as is" and "as available" basis.<br/> We make no representations or warranties of any kind, express or implied.<br/> As to the operation of our web application or the information, content, materials, or products included on our web application.</p>
+      <br/><br/>
+        <h2 id="6">6. Limitation of Liability</h2>
+      <p>We will not be liable for any damages of any kind arising from the use of our web application,<br/> including but not limited to direct, indirect, incidental, punitive, and consequential damages.</p>
+      <br/><br/>
+        <h2 id="7">7. Changes to These Terms</h2>
+      <p>We reserve the right to modify these terms of service at any time without prior notice.<br/> By continuing to use our web application after we post changes to these terms, you agree to be bound by the revised terms.</p>
+      <br/><br/>
+        <h2 id="8">8. Governing Law</h2>
+      <p>These terms of service shall be governed by and construed in accordance with the laws of Bulgaria.<br/> Any disputes arising under or in connection with these terms shall be resolved exclusively by the courts of Bulgaria.</p>
 </div>
 </div>
 </div>
-</div>
-</div>
+
 </html>
