--- a/src/main/resources/static/html/Privacy&Policy.html
+++ b/src/main/resources/static/html/Privacy&Policy.html
@@ -24,6 +24,7 @@
 
               </div>
             </div>
+            <h1>Privacy & Policy</h1>
         </header>
         <div class="app-body">
             <nav class="navigation">
@@ -46,42 +47,41 @@
               </nav>
               <div class="app-body-main-content"> 
                 <a href="#1">1. Information We Collect</a><br/><br/>
-                <a href="#2">2. Use of Information</a><br/><br/>
-                <a href="#3">3. Data Security</a><br/><br/>
-                <a href="#4">4. Sharing of Information</a><br/><br/>
+                <a href="#2">2. Use of information</a><br/><br/>
+                <a href="#3">3. Data security</a><br/><br/>
+                <a href="#4">4. Sharing of Informationt</a><br/><br/>
                 <a href="#5">5. Data Retention</a><br/><br/>
                 <a href="#6">6. Cookies</a><br/><br/>
                 <a href="#7">7. Changes to This Privacy Policy</a><br/><br/>
                 <a href="#8">8. Contact Us</a><br/><br/>
-                <h1>Privacy Policy</h1>
-                <p>Thank you for using our web application that stores your important information.<br/><br/> We are committed to protecting your privacy and personal data.<br/><br/> By using our web application, you agree to the following privacy policy:</p>
-                <br/><br/>
+
+	
                 <h2 id="1">1. Information We Collect</h2>
-                <p>We collect personal information that you provide to us when you create an account, such as your name, email address, and password.<br/><br/> We also collect any information that you upload or store on our web application.</p>
+                <p>We collect personal information that you provide to us when you create an account, such as your name, email address, and password.<br/> We also collect any information that you upload or store on our web application.</p>
                 <br/><br/>
                 <h2 id="2">2. Use of Information</h2>
-                <p>We use your personal information and stored data to provide you with our web application's services, to communicate with you about your account and our web application,<br/><br/> and to improve our web application's features and functionality.</p>
-                <br/><br/>
+                <p>We use your personal information and stored data</br> to provide you with our web application's services, to communicate with you about your account and our web application,<br/> and to improve our web application's features and functionality.</p>
                 <h2 id="3">3. Data Security</h2>
-                <p>We take the security of your personal information and stored data seriously.<br/><br/> We use industry-standard measures to protect against unauthorized access, disclosure, alteration, or destruction of your personal information and stored data.<br/><br/> However, no method of transmission over the internet, or method of electronic storage, is 100% secure. Therefore, we cannot guarantee absolute security.</p>
+                <p>We take the security of your personal information and stored data seriously.<br/> We use industry-standard measures to protect against unauthorized access, disclosure,<br/> alteration, or destruction of your personal information and stored data.<br/> However, no method of transmission over the internet, or method of electronic storage,<br/> is 100% secure. Therefore, we cannot guarantee absolute security.</p>
                 <br/><br/>
                 <h2 id="4">4. Sharing of Information</h2>
-                <p>We will not sell or share your personal information or stored data with any third party without your explicit consent,<br/><br/> except as required by law or as necessary to provide you with our web application's services.</p>
+                <p>We will not sell or share your personal information or stored data with any third party without your explicit consent,<br/> except as required by law or as necessary to provide you with our web application's services.</p>
                 <br/><br/>
                 <h2 id="5">5. Data Retention</h2>
-                <p>We will retain your personal information and stored data for as long as necessary to provide you with our web application's services or as required by law.<br/><br/> If you delete your account, we will delete your personal information and stored data from our servers within a reasonable timeframe.</p>
+                <p>We will retain your personal information and stored data for as long as necessary<br/> to provide you with our web application's services or as required by law.<br/> If you delete your account, we will delete your personal information and stored data from our servers within a reasonable timeframe.</p>
                 <br/><br/>
                 <h2 id="6">6. Cookies</h2>
-                <p>Our web application may use cookies to enhance your user experience.<br/><br/> A cookie is a small text file that is placed on your device when you access our web application.<br/><br/> You may choose to disable cookies in your browser settings, but doing so may limit your use of our web application.</p>
+                <p>Our web application may use cookies to enhance your user experience.<br/> A cookie is a small text file that is placed on your device when you access our web application.<br/> You may choose to disable cookies in your browser settings, but doing so may limit your use of our web application.</p>
                 <br/><br/>
                 <h2 id="7">7. Changes to This Privacy Policy</h2>
                 <br/><br/>
-                <p>We reserve the right to modify this privacy policy at any time without prior notice.<br/><br/> By continuing to use our web application after we post changes to this privacy policy, you agree to be bound by the revised policy.</p>
+                <p>We reserve the right to modify this privacy policy at any time without prior notice.<br/> By continuing to use our web application after we post changes to this privacy policy,<br/> you agree to be bound by the revised policy.</p>
                 <h2 id="8">8. Contact Us</h2>
 	            <p>If you have any questions or concerns about our privacy policy, please contact us at safelootsup@gmail.com.</p>
+               
+                
 </div>
 </div>
 </div>
-</div>
-</div>
+</body>
 </html>
