fetched signup API in js frontend

--- a/src/main/resources/static/html/2fa.html
+++ b/src/main/resources/static/html/2fa.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
+    <title>Authentication</title>
     <link rel="stylesheet" href="css.css">
-    <script src="../script.js"></script>
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
 </head>
 <body>
@@ -21,24 +20,21 @@
                   <span>Safe</span>
                   <span>Loot</span>
                 </h1>
-                
+
               </div>
             </div>
-            <h1>Sign up</h1>
+            <h1>Authenticate your account </h1> 
         </header>
         <div class="app-body">
-            <nav class="navigation"></nav>
-            <div class="app-body-main-content">
-                <input type="email" placeholder="email" id="email"></input>
-                <input type="password" placeholder="password" id="password"></input>
-                <input type="text" placeholder="First Name" id="firstName"></input>
-                <input type="text" placeholder="Last Name" id="lastName"></input>
-                <input type="number" placeholder="Phone Number" id="number"></input>
-                <input type="text" placeholder="Location" id="location"></input>
-                <button onclick="register()">Sign Up Here</button>
+            <nav class="navigation">
 
-            </div>
-              </div>   
+            </nav>
+            <div class="app-body-main-content">
+                <p class="auth-txt">Protecting your tickets is our top priority.<br/>    Please confirm your account by entering the authorization code sent to your email.
+                </p>
+                <input placeholder="2FA" type="text">
+                </div>
+              </div>
         </div>
     </div>
 </body>
