--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -26,7 +26,13 @@
             <h1>Log in</h1> 
         </header>
         <div class="app-body">
-            
+            <nav class="navigation">
+            </nav>
+            <div class="app-body-main-content">
+              <input type="email" placeholder="email" id="email"></input>
+              <input type="password" placeholder="password" id="password"></input>
+              <button onclick="login()">Log in</button>
+            </div>
               </div>   
         </div>
     </div>
