--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
     <link rel="stylesheet" href="css.css">
+    <script src="../script.js"></script>
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
 </head>
 <body>
