Making styles of login and signup + fixing tittles

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -57,7 +57,7 @@
       <div class="app-body">
         <div class="app-body-navigation">
           <nav class="navigation">
-            <a href="aboutus.html" target="_blank">
+            <a href="aboutus.html">
               <i class="ph-browsers"></i>
               <span>About us</span>
             </a>
@@ -111,8 +111,8 @@
                   <div class="tile-header">
                     <i class="ph-file-light"></i>
                     <h3>
-                      <span>Wallet</span>
-                      <span>Check you $ </span>
+                      <span>Generator</span>
+                      <span>Get secured password </span>
                     </h3>
                   </div>
                   <a href="wallet.html">  
