--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -24,7 +24,7 @@
                 
               </div>
             </div>
-            <h1>Log in</h1> 
+            <h1 class="jol">Log in</h1> 
         </header>
         <div class="app-body">
             <nav class="navigation">
@@ -32,7 +32,8 @@
             <div class="app-body-main-content">
               <input type="email" placeholder="email" id="email"></input>
               <input type="password" placeholder="password" id="password"></input>
-              <button onclick="login()">Log in</button>
+              <button class="send" onclick="login()">Next</button>
+              <a href="signin.html" class="donthave">Create account?</a>
             </div>
               </div>   
         </div>
