--- a/src/main/resources/static/html/signin.html
+++ b/src/main/resources/static/html/signin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
+    <title>Sign up</title>
     <link rel="stylesheet" href="css.css">
     <script src="../script.js"></script>
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
@@ -24,7 +24,7 @@
                 
               </div>
             </div>
-            <h1>Sign up</h1>
+            <h1 class="jol">Sign up</h1>
         </header>
         <div class="app-body">
             <nav class="navigation"></nav>
@@ -35,8 +35,8 @@
                 <input type="text" placeholder="Last Name" id="lastName"></input>
                 <input type="number" placeholder="Phone Number" id="number"></input>
                 <input type="text" placeholder="Location" id="location"></input>
-                <button onclick="register()">Sign Up Here</button>
-
+                <button class="send" onclick="register()">Next</button>
+                <a class="donthave" href="login.html">Already have account?</a>
             </div>
               </div>   
         </div>
