--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -30,8 +30,8 @@
             <nav class="navigation">
             </nav>
             <div class="app-body-main-content">
-              <input type="email" placeholder="email" id="email"></input>
-              <input type="password" placeholder="password" id="password"></input>
+              <input type="email" placeholder="email" id="email">
+              <input type="password" placeholder="password" id="password">
               <button class="send" onclick="login()">Next</button>
               <a href="signin.html" class="donthave">Create account?</a>
             </div>
