--- a/src/main/resources/static/html/signin.html
+++ b/src/main/resources/static/html/signin.html
@@ -29,12 +29,12 @@
         <div class="app-body">
             <nav class="navigation"></nav>
             <div class="app-body-main-content">
-                <input type="email" placeholder="email" id="email"></input>
-                <input type="password" placeholder="password" id="password"></input>
-                <input type="text" placeholder="First Name" id="firstName"></input>
-                <input type="text" placeholder="Last Name" id="lastName"></input>
-                <input type="number" placeholder="Phone Number" id="number"></input>
-                <input type="text" placeholder="Location" id="location"></input>
+                <input type="email" placeholder="email" id="email">
+                <input type="password" placeholder="password" id="password">
+                <input type="text" placeholder="First Name" id="firstName">
+                <input type="text" placeholder="Last Name" id="lastName">
+                <input type="number" placeholder="Phone Number" id="number">
+                <input type="text" placeholder="Location" id="location">
                 <button class="send" onclick="register()">Next</button>
                 <a class="donthave" href="login.html">Already have account?</a>
             </div>
