--- a/src/main/resources/static/html/files.html
+++ b/src/main/resources/static/html/files.html
@@ -40,7 +40,7 @@
                   Files
                 </a>
                 <a href="#">
-                  Wallet
+                  Generator
                 </a>
               </div>
             </div>
@@ -73,7 +73,6 @@
               
             </div>
             <div class="app-body-main-content"> 
-                <a class="add-button-files"> Add </a>
                 <div class="files-board">
                     <h1>VajenDocument.dox</h1>
                     <h1>Website.html</h1>
@@ -85,6 +84,12 @@
                     <h1>Website.html</h1>
                     <h1>1zad.c</h1>   
                 </div>
+            </div>
+            <div class="secondary-content">
+              <br/><br/>
+              <input type="text" placeholder="Tittle">
+              <input type="password" placeholder="Password">
+                 <a class="add-button-files"> Add </a>
             </div>
           </div> 
 
