--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -40,7 +40,7 @@
               Files
             </a>
             <a href="#">
-              Wallet
+              Generator
             </a>
           </div>
         </div>
