Small fetching and changing

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -39,7 +39,7 @@
             <a href="files.html">
               Files
             </a>
-            <a href="#">
+            <a href="generator.html">
               Generator
             </a>
           </div>
@@ -115,7 +115,7 @@
                       <span>Get secured password </span>
                     </h3>
                   </div>
-                  <a href="wallet.html">  
+                  <a href="generator.html">  
                     <span>Go to service</span>
                    
                       <i class="ph-caret-right-bold"></i>
