--- a/src/main/resources/static/html/passwords.html
+++ b/src/main/resources/static/html/passwords.html
@@ -7,6 +7,7 @@
     <title>Passwords</title>
     <link rel="stylesheet" href="css.css">
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
+    <script src="../script.js"></script>
 </head>
 <body>
     <div class="app">
@@ -39,7 +40,7 @@
             <a href="files.html" >
               Files
             </a>
-            <a href="#">
+            <a href="generator.html">
               Generator
             </a>
           </div>
@@ -85,12 +86,13 @@
             </div>
             <div class="secondary-content">
               <br/><br/>
-              <input type="text" placeholder="Tittle">
-              <input type="password" placeholder="Password">
-              <a class="add-button">Add</a>
+              <input type="text" placeholder="Tittle" id="passname">
+              <input type="password" placeholder="Password" id="password">
+              <input type="url" placeholder="Website" id="url">
+              <button class="add-button"onclick="addpassword()" >Add</button>
             </div>
           </div> 
-
+          <div id="snackbar">Password saved.</div>
     </div>
 </body>
 </html>
