--- a/src/main/resources/static/html/account.html
+++ b/src/main/resources/static/html/account.html
@@ -39,7 +39,7 @@
                 <a href="files.html">
                   Files
                 </a>
-                <a href="#">
+                <a href="generator.html">
                   Generator
                 </a>
               </div>
