Updated the TOS and added screenshots of the appl

--- a/src/main/resources/static/html/Terms of Services.html
+++ b/src/main/resources/static/html/Terms of Services.html
@@ -63,7 +63,7 @@
       <p>You may use our web application for lawful purposes only.<br/> You agree not to use our web application for any illegal or unauthorized purpose.<br/> You also agree not to use our web application in any way that could damage, disable, overburden, or impair our servers or networks.</p>
       <br/><br/>
         <h2 id="3">3. Data Privacy</h2>
-      <p>We take the privacy and security of your data seriously.<br/> We will never sell or share your personal information with any third party without your explicit consent.<br/> However, we cannot guarantee the security of your data, and you use our web application at your own risk.</p>
+      <p>We take the privacy and security of your data seriously.<br/> We will never sell or share your personal information with any third party without your explicit consent.<br/></p>
       <br/><br/>
         <h2 id="4">4. Ownership of Content</h2>
       <p>You retain ownership of any content that you upload to our web application.<br/> However, by uploading content, you grant us a non-exclusive, worldwide,<br/> royalty-free, and perpetual license to use, distribute, and display the content in connection with our web application.</p>
