--- a/src/main/resources/static/html/passwords.html
+++ b/src/main/resources/static/html/passwords.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="images/icon.ico" />
     <script src="../script.js"></script>
 </head>
-<body>
+<body onload="getUser(), findMyPasses()">
     <div class="app">
       <header class="app-header">
         <div class="app-header-logo">
@@ -47,7 +47,7 @@
         </div>
         <div class="app-header-actions">
           <a href="account.html" class="user-profile">
-            <span>Stoqn Babanov</span>
+            <span id="user"></span>
             <span>
               <img src="images/image.png" />
             </span>
@@ -77,10 +77,10 @@
 
 
                 
-                <div class="password-board">
-                    <h1>gmail : ***********</h1>  
+                <div class="password-board" id="board" >
+                    <!-- <h1>gmail : ***********</h1>  
                     <h1>gmail : ***********</h1>
-                    <h1>discord : ***********</h1>   
+                    <h1>discord : ***********</h1>    -->
                 </div>
                 
             </div>
