--- a/src/main/resources/static/html/generator.html
+++ b/src/main/resources/static/html/generator.html
@@ -74,7 +74,7 @@
              <div class="app-body-main-content">
                     <input type="number" placeholder="Length of password"  id="len">
                     <button onclick="generateAndDisplayPassword()" class="add-button-generate"> Generate</button>
-                    <h1 id="passwordOutput"></h1>
+                    <h1 id="passwordOutput" style="margin-top: 15vh;"></h1>
              </div>
               
               </div>   
