--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -43,6 +43,9 @@
             <a href="generator.html">
               Generator
             </a>
+            <a href="passInfo.html">
+              Dashboard
+            </a>
           </div>
         </div>
         <div class="app-header-actions">
