--- a/src/main/resources/static/html/passInfo.html
+++ b/src/main/resources/static/html/passInfo.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div class="app"">
+        <div class="app">
         <header class="app-header">
             <div class="app-header-logo">
               <div class="logo">
@@ -28,15 +28,16 @@
             </nav>
             <div class="app-body-main-content">
               <input type="email" placeholder="masterpassword" id="master">
-              <button class="send" onclick="showInfo()">Enter</button>
+              <button style="width: 800px;height: 70px;"class="send" onclick="showInfo()">Enter</button>
              
             </div>
               </div>   
-        </div>
-
+<div class="app-body-main-content">
 
         <div id="dashboard" class="info">
-
+          <h1>DADA</h1>
+</div>
+        </div>
         </div>
     </body>
 </html>
